# fikby-ide

./: COMPILATION_FIXES.md  COMPLETE_PROJECT_STATUS.md  Cargo.toml  FILE_EXPLORER_COMPLETE.md  FILE_EXPLORER_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_STATUS.md  FIXES_SUMMARY.md  GTK4_MIGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LINE_ALIGNMENT_FIX.md  LINE_COUNT_FIX.md  QUICK_START.md  README.md  SECURITY_REVIEW.md  THEME_IMPLEMENTATION.md
src/: config.rs  editor.rs  file_explorer.rs  find_replace.rs  highlight.rs  main.rs  settings.rs
src/resources/: menu.ui  resources.gresource.xml
src/tests/: highlight_logic.rs  mod.rs  theme_mode.rs
src/ui/: mod.rs
